# Caninana

./: CMakeLists.txt  README.md  caninana_config.json
core/: CMakeLists.txt
core/include/: file_analyzer.h  file_exception.h  performance_monitor.h  quarantine_manager.h  security_logger.h  signature_engine.h  signature_updater.h
core/src/: bindings.cpp  file_analyzer.cpp  performance_monitor.cpp  quarantine_manager.cpp  security_logger.cpp  signature_engine.cpp  signature_updater.cpp
scripts/: test_core.py
signatures/: default.json
ui/: caninana_core.exp  caninana_core.lib  caninana_core.pyd  main.py
ui/components/: animated_widgets.py  configuration_manager.py  dashboard.py  design_system.py  file_scanner.py  history_panel.py  log_analyzer.py  navigation.py  results_dashboard.py  status_cards.py
